# attio-python-sdk

./: README.md  generators.yml  pyproject.toml
attio/: __init__.py  client.py  environment.py
attio-python-sdk/: __init__.py  environment.py  setup.py
attio-python-sdk/core/: jsonable_encoder.py
attio-python-sdk/resources/: __init__.py
attio-python-sdk/types/: attribute_config_currency.py  attribute_default_value_one.py  attribute_default_value_zero.py  attribute_relationship_id.py  comment_resolved_by.py  input_value_fifteen.py  input_value_latitude_country_code.py  input_value_option.py  input_value_slug_or_id_of_matching_attribute.py  input_value_two.py  list_workspace_member_access_item_level.py  oauth_scope.py  output_value_attribute_type.py  output_value_domain.py  output_value_email_address.py  output_value_first_name.py  output_value_interacted_at_owner_actor_type.py  output_value_original_phone_number.py  output_value_seventeen.py  output_value_sixteen.py  output_value_three.py  task_created_by_actor.py  task_created_by_actor_type.py
attio/core/: __init__.py
attio/types/: attribute.py  attribute_config.py  attribute_config_currency.py  attribute_config_record_reference.py  attribute_default_value_one.py  attribute_default_value_zero.py  attribute_default_value_zero_template.py  attribute_id.py  attribute_relationship.py  attribute_relationship_id.py  comment.py  comment_author.py  comment_entry.py  comment_id.py  comment_record.py  comment_resolved_by.py  (+72 more)
fern/: fern.config.json  generators.yml
openapi/: openapi.yml
python-sdk/: client.py
(+2045 files in other folders)
