[tool.poetry]
name = "attio-sdk"
version = "0.1"
description = "Python SDK for interacting with the Attio API generated with Fern"
authors = ["Yummy OÜ <martin@yummy.eu>"]
readme = "README.md"
license = "MIT License"
homepage = "https://github.com/yummyshop/attio-python-sdk"
repository = "https://github.com/yummyshop/attio-python-sdk"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = [ "LICENSE.txt", "README.md"]
packages = [
    { include = "attio-python-sdk" },
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.3"
pydantic = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"